cmake_minimum_required(VERSION 4.0)
project(Labo_1 C)

set(CMAKE_C_STANDARD 11)

add_executable(Labo_1
        question1.c
        question2.c
        question3.c
        question4.c
        question5.c
        question6.c
        question7.c
        question8.c
        question9.c
        "question 10.c")
